--- a/sub/franchise.html
+++ b/sub/franchise.html
@@ -30,7 +30,7 @@
                 <div class="work_title_and_concept">
                     <div class="work_title">
                         <h2>루이스 버거<br>웹 표준 리뉴얼</h2>
-                        <div class="quick_button quick_button6" onclick="location.href='../../link/franchise/index.html'">
+                        <div class="quick_button quick_button6" onclick="location.href='../link/franchise/index.html'">
                             <div class="button_container">
                                 <p>VISIT WEBSITE</p>
                                 <span class="white_arrow"><img src="../image/sub/white_button_arrow.png" alt="arrow"></span>
