--- a/sub/franchise_mobile.html
+++ b/sub/franchise_mobile.html
@@ -29,7 +29,7 @@
                 <div class="work_title_and_concept">
                     <div class="work_title">
                         <h2>루이스 버거<br>모바일 웹 리뉴얼</h2>
-                        <div class="quick_button quick_button8" onclick="location.href='../../link/franchise_mobile/index.html'">
+                        <div class="quick_button quick_button8" onclick="location.href='../link/franchise_mobile/index.html'">
                             <div class="button_container">
                                 <p>VISIT WEBSITE</p>
                                 <span class="white_arrow"><img src="../image/sub/white_button_arrow.png" alt="arrow"></span>
